# api_agentAI

./: .gitignore  README-EN.md  README.md  app.py  pyproject.toml  requirements.txt  test.py  usuarios.db
CopRobo42/: agent.py  app.py  auth.py  criar_usuario.py
CopRobo42/templates/: home.html  login.html
agent_adk/: api.py  pyproject.toml
agent_adk/policial_federal/: .env  agent.py
agent_adk/policial_federal/templates/: index.html
medallion/gold/: conversao.py  tratamento_final.py
medallion/silver/: tratamento_acidentes.py  tratamento_datatran.py
policial_federal/: agent.py
static/css/: style.css
templates/: index.html
